[package]
name = "bpfdeploy-libbpf-sys"
version = "0.7.0+v0.7.0"
description = "Fork of libbpf-sys"
readme = "README.md"
repository = "https://github.com/mdaverde/libbpf-sys"
homepage = "https://github.com/mdaverde/libbpf-sys"
keywords = ["bpf", "ebpf", "xdp"]
authors = [
	"Milan <milan@mdaverde.com>",
]
license = "BSD-2-Clause"
edition = "2018"
build = "build.rs"
links = "libbpf"

[build-dependencies]
bindgen = { version = "^0.59", optional = true }
cc = "^1.0"
pkg-config = "0.3"

[lib]
crate-type = ["lib", "staticlib"]

[features]
novendor = []
